<resources>
    <string name="app_name">Templis</string>
    <string name="_50">$50</string>
    <string name="in_cinemas">In Cinemas</string>
    <string name="watch_now">Watch Now</string>
    <string name="home">Home</string>
    <string name="tv">TV</string>
    <string name="movies">Movies</string>
    <string name="sports">Sports</string>
    <string name="usa">USA</string>
    <string name="the_sinner">The Sinner</string>
    <string name="description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</string>
    <string name="more">More</string>
    <string name="_4_9">4.2</string>
    <string name="avengers_end_game">Avengers: End Game</string>
    <string name="add_cards_not_found">No Cards Found, Please Add Cards</string>
    <string name="add_new_card">Add New Card</string>
    <string name="pay_now">Pay Now</string>
    <string name="payment">Payment</string>
    <string name="dummy_Card_num">1254   ****   ****   2563</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="select_quality">Select Quality</string>
    <string name="total_price">Total Price</string>
    <string name="price">$0</string>
    <string name="video_quality">Video Quality</string>
    <string name="hd">HD</string>
    <string name="hq">HQ</string>
    <string name="fullHd">Full HD</string>
    <string name="_4k">4K</string>
    <string name="standard">Standard</string>
    <string name="_5_1">5.1</string>
    <string name="dolby">Dolby</string>
    <string name="audio_quality">Audio Quality</string>
    <string name="ticket_txt_title">Tickets </string>
    <string name="ticket_txt_title2">(This is valid for 24hrs)</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="four">Four</string>
    <string name="my_tickets">My Tickets</string>
    <string name="one_user">One User</string>
    <string name="user_name">User Name</string>
    <string name="john_doe_gmail_com">john.doe@gmail.com</string>
    <string name="profile">Profile</string>
    <string name="payments">Payments</string>
    <string name="live">Live</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="you_can_share_this_with_only">You can share this with only</string>
    <string name="expires_in">Expires in</string>
    <string name="share">Share</string>
    <string name="_15">15</string>
    <string name="hours">Hours</string>
    <string name="colons">:</string>
    <string name="_20">20</string>
    <string name="_45">45</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="now_showing">Now Showing</string>
    <string name="valid_only_3_hours">Valid only 3 hours</string>
    <string name="templis">Templis</string>
    <string name="cast">Cast</string>
    <string name="search">Search...</string>
    <string name="descrip">The Sinner is an American police procedural anthology television series developed by Derek Simonds for USA Network. It is named after Petra Hammesfahr\'s 1999 novel, which serves as the basis for the first season. Bill Pullman stars as a police detective who investigates crimes committed by unlikely culprits and attempts to uncover their motivations. Only Pullman appears in every season, with the rest of the cast changing for each season\'s story. Originally intended as an eight-part miniseries, The Sinner premiered on August 2, 2017, to critical acclaim and high ratings. The show\'s success led to USA Network turning it into an anthology series, with a second season airing in 2018 and a third in 2020. A fourth season premiered on October 13, 2021</string>
</resources>