<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.softradix.templis.ui.fragments.selectQuality.SelectQualityViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:paddingHorizontal="@dimen/_15sdp"
        tools:context=".ui.fragments.selectQuality.SelectQualityFragment">

        <RelativeLayout
            android:id="@+id/headerLay"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="@dimen/_2sdp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/select_quality"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingVertical="@dimen/_10sdp"
                android:paddingEnd="@dimen/_6sdp"
                android:src="@drawable/ic_arrow_back_ios" />
        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/videoQualityTxtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/video_quality"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/headerLay" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/videoQualityLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_5sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/videoQualityTxtTitle">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/selectHq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:background="@drawable/gray_bg"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_7sdp"
                android:text="@string/hq"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/selectHd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:background="@drawable/gray_bg"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_7sdp"
                android:text="@string/hd"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/selectFullHD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:background="@drawable/gray_bg"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_7sdp"
                android:text="@string/fullHd"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/select4K"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/gray_bg"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_7sdp"
                android:text="@string/_4k"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/audioQualityTxtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_5sdp"
            android:text="@string/audio_quality"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/videoQualityLayout" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/audioQualityLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_5sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/audioQualityTxtTitle">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/selectStandard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:background="@drawable/gray_bg"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_7sdp"
                android:text="@string/standard"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/select5_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:background="@drawable/gray_bg"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_7sdp"
                android:text="@string/_5_1"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/selectDolby"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:background="@drawable/gray_bg"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_7sdp"
                android:text="@string/dolby"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp" />


        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ticketsTxtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_5sdp"
            android:text="@string/ticket_txt_title"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/audioQualityLayout" />


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_5sdp"
            android:text="@string/ticket_txt_title2"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintStart_toEndOf="@+id/ticketsTxtTitle"
            app:layout_constraintTop_toBottomOf="@id/audioQualityLayout" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ticketsLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_5sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ticketsTxtTitle">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/selectOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:background="@drawable/gray_bg"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_7sdp"
                android:text="@string/one"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/selectTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:background="@drawable/gray_bg"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_7sdp"
                android:text="@string/two"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/selectThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:background="@drawable/gray_bg"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_7sdp"
                android:text="@string/three"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/selectFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:background="@drawable/gray_bg"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_7sdp"
                android:text="@string/four"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:animateLayoutChanges="true"
            app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ticketsLayout">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_persons"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:src="@drawable/ic_two"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:src="@drawable/ic_four"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginVertical="@dimen/_20sdp"
            android:background="@drawable/gray_bg"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/payNowBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_price"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/priceTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.totalMutableLiveData}"

                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="36sp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/payNowBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_35sdp"
            android:background="@drawable/button_bg"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/pay_now"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
