<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.details.DetailsFragment">

    <SurfaceView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_15sdp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:src="@drawable/ic_arrow_back_ios"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/_280sdp"
        android:layout_height="wrap_content"
        android:background="@drawable/transparent_bg"
        android:paddingVertical="65dp"
        android:paddingStart="70dp"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/videoView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/videoView"
        app:layout_constraintVertical_bias="0.6">

        <androidx.appcompat.widget.AppCompatTextView

            android:id="@+id/titleTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/the_sinner"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <me.zhanghai.android.materialratingbar.MaterialRatingBar
            android:id="@+id/ratingView"
            style="@style/RatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="true"
            android:numStars="5"
            android:progressTint="@color/orange"
            android:rating="4"
            app:layout_constraintStart_toStartOf="@+id/titleTxt"
            app:layout_constraintTop_toBottomOf="@+id/titleTxt" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_2sdp"
            android:background="@drawable/et_background"
            android:paddingHorizontal="@dimen/_10sdp"
            android:text="@string/_4_9"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/ratingView"
            app:layout_constraintTop_toBottomOf="@+id/titleTxt" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/description"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/description"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/ratingView"
            app:layout_constraintTop_toBottomOf="@id/ratingView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/moreTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:drawableEnd="@drawable/ic_arrow_down_orange"
            android:text="@string/more"
            android:textColor="@color/orange"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/ratingView"
            app:layout_constraintTop_toBottomOf="@id/description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/watchNowBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginVertical="@dimen/_15sdp"
        android:background="@drawable/button_bg"
        android:drawableEnd="@drawable/ic_baseline_arrow_right"
        android:paddingStart="@dimen/_28sdp"
        android:paddingEnd="@dimen/_5sdp"
        android:text="@string/watch_now"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>